fixed word wrapping on plans button page

--- a/services/web/public/stylesheets/app/plans.less
+++ b/services/web/public/stylesheets/app/plans.less
@@ -113,4 +113,6 @@
 			margin-left: @line-height-computed / 2;
 		}
 	}
+
+	.card .btn { white-space:normal; }
 }
